--- a/client/src/app/forms2/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms2/types/variant-select/variant-select.type.html
@@ -12,7 +12,7 @@
   [cvcLoading]="isLoading$ | ngrxPush"
   [cvcParamName]="onGeneName$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
-  [cvcModelChange]="props.change">
+  (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
 <!-- select option templates -->
@@ -34,7 +34,7 @@
               nzType="secondary"
               [innerHtml]="
                 result.variantAliases.join(', ')
-                  | highlightTypeahead: searchString
+                  | highlightTypeahead : searchString
               "></span
           ></em>
         </ng-container>
