--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -11,7 +11,7 @@
   [cvcDisabled]="onRequiresDisease$ && !(onRequiresDisease$ | ngrxPush)"
   [cvcLoading]="isLoading$ | ngrxPush"
   (cvcOnSearch)="onSearch$.next($event)"
-  [cvcModelChange]="props.change">
+  (cvcOnModelChange)="props.change && props.change(field, $event)">
 </cvc-entity-select>
 
 <!-- select option templates -->
@@ -35,7 +35,7 @@
               nzType="secondary"
               [innerHtml]="
                 result.diseaseAliases.join(', ')
-                  | highlightTypeahead: searchString
+                  | highlightTypeahead : searchString
               "></span
           ></em>
         </ng-container>
