updated icon names, files, etc. to Therapy

--- a/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
+++ b/client/src/app/components/shared/site-stats-card/site-stats-card.component.html
@@ -135,8 +135,8 @@
             <i
               nz-icon
               nzTheme="twotone"
-              [nzTwotoneColor]="'Intervention' | entityColor"
-              nzType="civic-intervention"></i>
+              [nzTwotoneColor]="'Therapy' | entityColor"
+              nzType="civic-therapy"></i>
           </ng-template>
         </a>
       </nz-col>
