--- a/client/src/app/components/therapies/cvc-therapy-popover/cvc-therapy-popover.component.html
+++ b/client/src/app/components/therapies/cvc-therapy-popover/cvc-therapy-popover.component.html
@@ -8,7 +8,7 @@
       <ng-template #cardTitle>
         <i
           nz-icon
-          nzType="civic-intervention"
+          nzType="civic-therapy"
           nzTheme="twotone"
           nzTwotoneColor="#AC3996"></i>
         {{ d.name | truncate : 50 }}
