--- a/client/src/app/components/therapies/cvc-therapy-tag/cvc-therapy-tag.component.html
+++ b/client/src/app/components/therapies/cvc-therapy-tag/cvc-therapy-tag.component.html
@@ -28,7 +28,7 @@
 <ng-template #tagContent>
   <i
     nz-icon
-    nzType="civic-intervention"
+    nzType="civic-therapy"
     nzTheme="twotone"
     nzTwotoneColor="#AC3996"></i>
   <ng-container *ngIf="truncateLongName; else fullName">
