--- a/client/src/app/layout/layout.component.html
+++ b/client/src/app/layout/layout.component.html
@@ -149,7 +149,7 @@
         nzMatchRouter>
         <i
           nz-icon
-          nzType="civic-intervention"></i>
+          nzType="civic-therapy"></i>
         <span> <a routerLink="/therapies">Therapies</a> </span>
       </li>
 
