--- a/client/src/app/views/therapies/therapies-detail/therapies-detail.component.html
+++ b/client/src/app/views/therapies/therapies-detail/therapies-detail.component.html
@@ -6,8 +6,8 @@
       <i
         nz-icon
         nzTheme="twotone"
-        [nzTwotoneColor]="'Intervention' | entityColor"
-        nzType="civic-intervention"></i>
+        [nzTwotoneColor]="'Therapy' | entityColor"
+        nzType="civic-therapy"></i>
       {{ therapy.name }}
     </nz-page-header-title>
     <nz-page-header-extra *ngIf="therapy.ncitId">
