--- a/client/src/app/views/therapies/therapies-home/therapies-home.page.html
+++ b/client/src/app/views/therapies/therapies-home/therapies-home.page.html
@@ -9,8 +9,8 @@
         <i
           nz-icon
           nzTheme="twotone"
-          [nzTwotoneColor]="'Intervention' | entityColor"
-          nzType="civic-intervention"></i>
+          [nzTwotoneColor]="'Therapy' | entityColor"
+          nzType="civic-therapy"></i>
       </nz-col>
       <nz-col
         nzFlex="600px"
