--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -21,8 +21,10 @@
       display: inline-block;
       padding: 3px 2px 3px 4px;
       margin: -3px 0 -3px 0;
+      background-color: red;
     }
     .tag-label {
+      background-color: green;
       display: inline-block;
       margin: 0;
       padding: 0;
