--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -9,7 +9,7 @@
   }
 }
 
-.select-item {
+.default {
   nz-tag {
     background: #f5f5f5;
     border: 1px solid #f0f0f0;
@@ -21,20 +21,27 @@
       display: inline-block;
       padding: 3px 2px 3px 4px;
       margin: -3px 0 -3px 0;
-      background-color: red;
     }
     .tag-label {
-      background-color: green;
       display: inline-block;
       margin: 0;
       padding: 0;
       margin: -3px 0 -3px 0;
-      padding: 3px 0 3px 2px;
+      padding: 3px 3px 3px 2px;
       line-height: 1;
     }
     ::ng-deep i.ant-tag-close-icon.anticon-close {
       transition: none;
       margin-left: 3px;
+    }
+  }
+}
+
+.select-item {
+  .default();
+  nz-tag {
+    .tag-label {
+      padding-right: 0;
     }
   }
 }
