--- a/client/src/app/forms2/components/entity-tag/entity-tag.component.less
+++ b/client/src/app/forms2/components/entity-tag/entity-tag.component.less
@@ -1,4 +1,5 @@
 @import 'themes/global-variables.less';
+@import 'themes/default.less';
 
 :host {
   nz-tag {
@@ -7,12 +8,40 @@
     //   padding-right: 4px;
     margin-inline-end: 4px;
   }
+  ::ng-deep &-checkable {
+    background-color: transparent;
+    cursor: pointer;
+
+    &:not(&-checked):hover {
+      color: @primary-color;
+    }
+
+    &:active,
+    &-checked {
+      color: @text-color-inverse;
+    }
+
+    &-checked {
+      background-color: @primary-6;
+    }
+
+    &:active {
+      background-color: @primary-7;
+    }
+  }
+
+  // ::ng-deep .ant-tag-checkable {
+  //   border: 1px solid #f0f0f0;
+  //   color: #999;
+  // }
+  // ::ng-deep .ant-tag-checkable {
+  //   border: 1px solid #f0f0f0;
+  //   color: #999;
+  // }
 }
 
 .default {
   nz-tag {
-    background: #f5f5f5;
-    border: 1px solid #f0f0f0;
     margin: 0;
     padding: 0 2px 0 0;
     margin-inline-end: 4px;
@@ -45,6 +74,7 @@
     }
   }
 }
+
 .multi-select-item {
   // pull content margins to the edges of the tag, to increase
   // popover hover area
@@ -61,4 +91,8 @@
 
 .typeahead-match {
   font-weight: bold;
+}
+
+a.disabled {
+  pointer-events: none;
 }
