--- a/client/src/app/forms2/types/therapy-select/therapy-select.type.html
+++ b/client/src/app/forms2/types/therapy-select/therapy-select.type.html
@@ -21,6 +21,7 @@
   <ng-container *ngFor="let result of result$ | ngrxPush; index as i">
     <ng-template #optionTemplates>
       <cvc-entity-tag
+        [cvcDisableLink]="true"
         [cvcCacheId]="result.__typename + ':' + result.id"
         [cvcEmphasize]="searchString"></cvc-entity-tag>
       <span
