Fix disease popover by not using variantCount

--- a/client/src/app/components/diseases/cvc-disease-popover/cvc-disease-popover.component.html
+++ b/client/src/app/components/diseases/cvc-disease-popover/cvc-disease-popover.component.html
@@ -30,8 +30,8 @@
         <nz-descriptions-item nzTitle="Evidence" nzSpan="1">
           {{d.evidenceItemCount}}
         </nz-descriptions-item>
-        <nz-descriptions-item nzTitle="Variants" nzSpan="1">
-          {{d.variantCount}}
+        <nz-descriptions-item nzTitle="Molecular Profiles" nzSpan="1">
+          {{d.molecularProfileCount}}
         </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
