Add variant type to variant browse table and make column searchable

--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -55,5 +55,8 @@
     <ng-container *ngSwitchCase="'variant'">
       <cvc-variant-tag [variant]="tag"></cvc-variant-tag>
     </ng-container>
+    <ng-container *ngSwitchCase="'variant-type'">
+      <cvc-variant-type-tag [variantType]="tag"></cvc-variant-type-tag>
+    </ng-container>
   </ng-container>
 </ng-template>
