--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -42,21 +42,27 @@
     [nzShowPagination]="false">
     <thead (nzSortOrderChange)="sortChange$.next($event)">
       <tr class="col-header-row">
-        <th nzWidth="200px"
+        <th nzWidth="150px"
           nzLeft
           [nzColumnKey]="sortColumns.VariantName"
           [nzSortFn]="true">
           Variant
         </th>
-        <th nzWidth="200px">
+        <th nzWidth="170px">
           Variant Aliases
         </th>
-        <th nzWidth="150px"
+        <th nzWidth="180px"
+          [nzFilters]="[{ text: 'None', value: true }]"
+          [nzFilterFn]="true"
+          (nzFilterChange)="onHasNoVariantTypeInputChange($event)">
+          Variant Types
+        </th>
+        <th nzWidth="100px"
           [nzColumnKey]="sortColumns.EntrezSymbol"
           [nzSortFn]="true">
           Gene
         </th>
-        <th nzWidth="250px">
+        <th nzWidth="200px">
           Diseases
         </th>
         <th nzWidth="180px">
@@ -71,6 +77,12 @@
         <th>
           <cvc-clearable-input-filter [(inputModel)]="variantAliasInput"
             (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
+        </th>
+        <th>
+          <cvc-clearable-input-filter
+            [(inputModel)]="variantTypeNameInput"
+            (inputModelChange)="filterChange$.next()">
+          </cvc-clearable-input-filter>
         </th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="geneSymbolInput"
@@ -99,6 +111,13 @@
             <cvc-plain-tag-overflow [maxDisplayCount]="1"
               [tags]="variant.aliases | pluck: 'name'"
               [matchingText]="variantAliasInput"></cvc-plain-tag-overflow>
+          </td>
+          <td>
+            <cvc-tag-overflow tagType="variant-type"
+              [tags]="variant.variantTypes"
+              [maxDisplayCount]="1"
+              [matchingText]="variantTypeNameInput">
+            </cvc-tag-overflow>
           </td>
           <td>
             <cvc-gene-tag [gene]="{id: variant.geneId, name: variant.geneName, link: variant.geneLink}"
