--- a/client/src/app/components/variants/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/variants/variants-menu/variants-menu.component.html
@@ -42,12 +42,19 @@
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
-          <nz-form-label>Type Filter</nz-form-label>
+          <nz-form-label>Variant Type</nz-form-label>
           <nz-form-control>
             <ng-container *ngIf="menuVariantTypes$ | ngrxPush as variantTypes">
               <nz-select nzAllowClear
-                nzPlaceHolder="Variant Type"
+                nzSize="small"
                 nzMode="multiple"
+                style="min-width: 115px;"
+                [nzDropdownMatchSelectWidth]="false"
+                nzPlaceHolder="Variant Type"
+                name="variantTypes"
+                nzShowSearch
+                [(ngModel)]="variantTypeFilter"
+                (ngModelChange)="onModelUpdated()"
                 [nzCustomTemplate]="variantTypeTemplate">
                 <nz-option *ngFor="let variantType of variantTypes"
                   [nzLabel]="variantType.name"
@@ -61,26 +68,18 @@
                 </div>
               </ng-template>
             </ng-container>
-            <!-- nz-input-group [nzSuffix]="typeInputClearTpl"
-              id="type-filter-group"
-              [nzCompact]="true"
-              nzSize="small">
-              <input type="text"
-                nz-input
-                placeholder="Variant Type"
-                name="name-filter"
-                (ngModelChange)="onModelUpdated()"
-                [(ngModel)]="variantTypeFilter" />
-              <ng-template #typeInputClearTpl>
-                <i nz-icon
-                  class="ant-input-clear-icon"
-                  nzTheme="fill"
-                  nzType="close-circle"
-                  *ngIf="variantTypeFilter"
-                  (click)="variantTypeFilter = undefined; onModelUpdated()"></i>
-              </ng-template>
-            </nz-input-group> -->
-
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+          <nz-form-label>
+            No Variant Type
+          </nz-form-label>
+          <nz-form-control>
+            <label nz-checkbox
+              name="noVt"
+              [(ngModel)]="hasNoVariantType"
+              (ngModelChange)="onModelUpdated()">
+            </label>
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
