--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -10,10 +10,21 @@
           <nz-descriptions nzSize="small"
             nzBordered="true"
             [nzColumn]="1"
-            nzLayout="vertical">
+            nzLayout="horizontal">
             <nz-descriptions-item nzTitle="MP Expression"
               [nzSpan]="1">
               <cvc-mp-tag-name [nameSegments]="mp.parsedName"></cvc-mp-tag-name>
+            </nz-descriptions-item>
+            <nz-descriptions-item
+              nzTitle="Common Name"
+              [nzSpan]="1">
+              <span *ngIf="mp.commonName; else noCommonName">
+                {{ mp.commonName }}
+              </span>
+              <ng-template #noCommonName>
+                <span nz-typography
+                  nzType="secondary">None provided</span>
+              </ng-template>
             </nz-descriptions-item>
           </nz-descriptions>
         </nz-col>
