Add sources as a supported entity to tag linking in comments

--- a/client/src/app/components/comments/comment-body/comment-body.component.html
+++ b/client/src/app/components/comments/comment-body/comment-body.component.html
@@ -32,6 +32,9 @@
             <span *ngSwitchCase="'MOLECULAR_PROFILE'">
                 <cvc-molecular-profile-tag [molecularProfile]="{id: c.entityId, name: c.displayName, link: c.link, deprecated: c.deprecated}"></cvc-molecular-profile-tag>
             </span>
+            <span *ngSwitchCase="'SOURCE'">
+                <cvc-source-tag [source]="{id: c.entityId, displayName: c.displayName, link: c.link}"></cvc-source-tag>
+            </span>
             <span *ngSwitchCase="'ROLE'">
                 <nz-tag><i nz-icon
                     nzType="civic-{{c.displayName.slice(0, -1)}}" nzTheme="twotone" nzTwotoneColor="#A0D8F5"></i> {{c.displayName}}</nz-tag>
