mostly functional submit evidence form hooked up

--- a/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
+++ b/client/src/app/forms2/types/org-submit-button/org-submit-button.type.html
@@ -8,7 +8,7 @@
 <ng-template #submitButton>
   <button
     cvcOrgSubmitButton
-    type="button"
+    type="submit"
     nz-button
     [disabled]="!form.valid"
     [nzDanger]=""
