disease-quick-add form working

--- a/client/src/app/forms2/types/therapy-select/therapy-select.type.html
+++ b/client/src/app/forms2/types/therapy-select/therapy-select.type.html
@@ -36,8 +36,9 @@
               [innerHtml]="
                 result.therapyAliases.join(', ')
                   | highlightTypeahead : searchString
-              "></span
-          ></em>
+              ">
+            </span>
+          </em>
         </ng-container>
         <ng-template #noAliases>--</ng-template>
       </span>
