add-entity-wrapper displays disease-select's add form

--- a/client/src/app/forms2/types/disease-select/disease-select.type.html
+++ b/client/src/app/forms2/types/disease-select/disease-select.type.html
@@ -63,12 +63,9 @@
 </ng-template>
 
 <!-- quick-add form template-->
-<ng-template
-  #addDisease
-  let-searchStr
-  let-createMsg>
+<ng-template #addDisease>
   <cvc-disease-quick-add-form
-    [cvcSearchString]="searchStr"
+    [cvcSearchStr]="onSearch$ | ngrxPush"
     (cvcOnCreate)="onCreate$.next($event)">
   </cvc-disease-quick-add-form>
 </ng-template>
