--- a/client/src/app/forms2/types/disease-select/disease-quick-add/disease-quick-add.form.html
+++ b/client/src/app/forms2/types/disease-select/disease-quick-add/disease-quick-add.form.html
@@ -2,7 +2,7 @@
   [formGroup]="form"
   nz-form
   nzLayout="horizontal"
-  (ngSubmit)="onSubmit$.next(model)">
+  (ngSubmit)="submitDisease()">
   <nz-row [nzGutter]="[0, 0]">
     <nz-col nzSpan="24">
       <formly-form
@@ -13,12 +13,6 @@
         (modelChange)="model = $event">
       </formly-form>
     </nz-col>
-    <!-- TODO: handle all mutator states using a state machine or observable chain w/ logic:
-    - initial: plus icon, "Create..." msg on button
-    - submitting: loading spinner, "Creating..." msg on button
-    - submit success: checkmark icon, "Created..." msg on button, 2-3 second pause then emit onCreate to parent
-    - submit error: error icon, "Error Creating..." msg on button, errors displayed
-    -->
     <nz-col nzSpan="24">
       <button
         nz-button
@@ -26,16 +20,12 @@
         [disabled]="!form.valid"
         nzBlock>
         <span
-          *ngIf="!(isSubmitting$ | ngrxPush)"
-          nz-icon
-          nzType="plus-circle"
-          nzTheme="outline"></span>
-        <span
           *ngIf="isSubmitting$ | ngrxPush"
           nz-icon
           nzType="loading"
           nzTheme="outline"></span>
-        Create Disease&nbsp;<i>{{ searchString$ | ngrxPush }}</i>
+        Add Disease
+        <ng-container *ngIf="model.name"> "{{ model.name }}" </ng-container>
       </button>
     </nz-col>
   </nz-row>
