--- a/client/src/app/forms2/wrappers/add-entity-form/add-entity-form.wrapper.html
+++ b/client/src/app/forms2/wrappers/add-entity-form/add-entity-form.wrapper.html
@@ -10,9 +10,9 @@
       nzSize="default"
       nzShape="circle"
       nz-popover
-      [disabled]="field.props && field.props.disabled"
+      [disabled]="field.props?.disabled"
       [nzPopoverTitle]="titleTemplate"
-      [nzPopoverContent]="contentTemplate">
+      [nzPopoverContent]="contentTemplate$ | ngrxPush">
       <span
         nz-icon
         nzType="plus-circle"
@@ -23,4 +23,3 @@
 <ng-template #titleTemplate>
   {{ props.addFormTitle }}
 </ng-template>
-<ng-template #contentTemplate> </ng-template>
