reverted to in-select add-entity form

--- a/client/src/app/forms2/types/disease-select/disease-quick-add/disease-quick-add.form.html
+++ b/client/src/app/forms2/types/disease-select/disease-quick-add/disease-quick-add.form.html
@@ -2,7 +2,7 @@
   [formGroup]="form"
   nz-form
   nzLayout="horizontal"
-  (ngSubmit)="submitDisease()">
+  (ngSubmit)="onSubmit$.next(model)">
   <nz-row [nzGutter]="[0, 0]">
     <nz-col nzSpan="24">
       <formly-form
