disease-select quick add updates model onCreate

--- a/client/src/app/forms2/components/entity-select/entity-select.component.html
+++ b/client/src/app/forms2/components/entity-select/entity-select.component.html
@@ -19,6 +19,7 @@
   [nzOptions]="cvcOptions || []"
   [nzDropdownRender]="cvcDropdownExtra || null"
   [nzNotFoundContent]="searchMessages"
+  [nzOpen]="cvcSelectOpen"
   (nzOpenChange)="cvcOnOpenChange.next($event)"
   (nzOnSearch)="cvcOnSearch.next($event)"
   (ngModelChange)="cvcOnModelChange.next($event)">
